fix z-index on input combo icon

--- a/frontend/assets/style/components/_forms.scss
+++ b/frontend/assets/style/components/_forms.scss
@@ -211,7 +211,7 @@ textarea,
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: 2;
     min-width: 40px;
     height: $inputHeight;
     text-align: center;
